--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,21 @@
 }
 
 .page {
-  background-color: var(--accent-color-dark-theme);
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--accent-color-dark-theme);
   background-attachment: fixed;
 }
 
 .header {
   position: relative;
-  width: 1024px;
-  background-image: url(../images/cover-image-dark.png);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 1024px;
+  margin-bottom: 60px;
+  background-image: url(../images/cover-image-dark.png);
 }
 
 .header__theme-menu {
@@ -55,118 +56,208 @@
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
-@media(width <= 375px){
+@media (width <= 375px) {
   .header__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
 
 .header__text {
+  align-self: flex-end;
+  width: 491px;
+  min-height: 71px;
+  margin-right: 20px;
   color: #000028;
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
   background-color: var(--accent-color);
-  width: 491px;
-  min-height: 71px;
-  align-self: flex-end;
-  margin-right: 20px;
 }
 
 .header::before {
-  position: absolute;
   content: "";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
   width: 25px;
   height: 25px;
   border: solid var(--accent-color);
   border-width: 1px 1px 0 0;
-  z-index: 1;
-  right: 20px;
-  top: 20px;
 }
 
 .header::after {
-  position: absolute;
   content: "";
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  z-index: 1;
   width: 25px;
   height: 25px;
   border: solid var(--accent-color);
   border-width: 0 0 1px 1px;
-  z-index: 1;
-  left: 20px;
-  bottom: 20px;
 }
 
 .header__rec {
   position: absolute;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: "IBM Plex mono", sans-serif;
-  line-height: 25px;
-  z-index: 1;
-  right: 48px;
   top: 20px;
+  right: 48px;
+  z-index: 1;
   color: var(--accent-color);
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
   text-transform: uppercase;
 }
 
 .header__rec-pulse {
   position: absolute;
+  top: 28px;
+  right: 29px;
+  z-index: 1;
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: var(--accent-color);
-  z-index: 1;
-  right: 29px;
-  top: 28px;
   box-shadow: 0 0 4px 2px var(--accent-color);
+  background-color: var(--accent-color);
+}
+
+.section-why {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-bottom: 80px;
+}
+
+.section-why__title {
+  color: var(--accent-color);
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.section-why__blocks {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 649px;
+}
+
+.section-why__blocks__item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.section-why__blocks__item-title {
+  background-color: var(--accent-color);
+}
+
+.section-why__blocks__item-title-text {
+  color: var(--accent-color-dark-theme);
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.section-why__blocks__item-text {
+  color: #f1b2ce;
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23.4px;
+}
+
+.images-gallery-title {
+  margin-bottom: 20px;
+  background-color: var(--accent-color);
+}
+
+.images-gallery-title-text {
+  color: var(--accent-color-dark-theme);
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23.4px;
 }
 
 .image-gallery-container {
   display: grid;
   grid-template-columns: repeat(3, 315px);
   grid-template-rows: repeat(3, 315px);
-  gap: 20px;
-  grid-template-areas: 
+  grid-template-areas:
     "sunset  sunset  ice-cream"
     "tape    books   ice-cream"
     "tape    street  street";
+  gap: 20px;
 }
 
 .image-gallery-container_sunset {
-  background-image: url(../images/sunset.png);
-  background-size: cover;
-  background-position: center;
   grid-area: sunset;
+  background-image: url(../images/sunset.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .image-gallery-container_ice-cream {
-  background-image: url(../images/ice-cream.png);
-  background-size: cover;
-  background-position: center;
   grid-area: ice-cream;
+  background-image: url(../images/ice-cream.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .image-gallery-container_tape {
-  background-image: url(../images/tape.png);
-  background-size: cover;
-  background-position: center;
   grid-area: tape;
+  background-image: url(../images/tape.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .image-gallery-container_books {
-  background-image: url(../images/books.png);
-  background-size: cover;
-  background-position: center;
   grid-area: books;
+  background-image: url(../images/books.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .image-gallery-container_street {
-  background-image: url(../images/street.png);
-  background-size: cover;
-  background-position: center;
   grid-area: street;
+  background-image: url(../images/street.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.footer {
+  position: relative;
+  padding: 319px 276px;
+}
+
+.footer::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+  width: 25px;
+  height: 25px;
+  border: solid var(--accent-color);
+  border-width: 1px 1px 0 0;
+}
+
+.footer::after {
+  content: "";
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  z-index: 1;
+  width: 25px;
+  height: 25px;
+  border: solid var(--accent-color);
+  border-width: 0 0 1px 1px;
 }
 
 .footer__title {
@@ -179,7 +270,7 @@
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-@media(width <= 375px){
+@media (width <= 375px) {
   .footer__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
