--- a/styles/light.css
+++ b/styles/light.css
@@ -4,13 +4,96 @@
   переключая тему
 */
 
-:root {
-  /*--accent-color: #ff8dcb;*/
-}
-
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #ff8dcb;
+  --accent-color-light-theme: #353430;
+
+  background-color: #fff;
+
+  .header {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .header__theme-menu-button {
+    color: var(--accent-color-light-theme);
+  }
+
+  .header__theme-menu-button_active {
+    outline: 1px solid var(--accent-color-light-theme);
+  }
+
+  .header__title {
+    color: #ffc2e6;
+    text-shadow: 4px 4px 0 var(--accent-color);
+  }
+
+  .header__text {
+    color: var(--accent-color-light-theme);
+    background-color: #ff8dcb;
+  }
+
+  .header::before {
+    border: solid var(--accent-color-light-theme);
+    border-width: 1px 1px 0 0;
+  }
+
+  .header::after {
+    border: solid var(--accent-color-light-theme);
+    border-width: 0 0 1px 1px;
+  }
+
+  .header__rec {
+    display: none;
+  }
+
+  .header__rec-pulse {
+    display: none;
+  }
+
+  .title-decor {
+    color: var(--accent-color-light-theme);
+  }
+
+  .section-why__blocks__item-title,
+  .section-causes__blocks__item-title,
+  .section-advice__blocks__item-title {
+    background-color: var(--accent-color);
+  }
+
+  .section-why__blocks__item-title-text,
+  .section-causes__blocks__item-title-text,
+  .section-advice__blocks__item-title-text {
+    color: var(--accent-color-light-theme);
+  }
+
+  .block-item-text {
+    color: var(--accent-color-light-theme);
+  }
+
+  .images-gallery-title-text {
+    color: var(--accent-color-light-theme);
+  }
+
+  .section-advice__blocks-title-text {
+    color: var(--accent-color-light-theme);
+  }
+
+  .footer::before {
+    border: solid var(--accent-color-light-theme);
+    border-width: 1px 1px 0 0;
+  }
+
+  .footer::after {
+    border: solid var(--accent-color-light-theme);
+    border-width: 0 0 1px 1px;
+  }
+
+  .footer__title {
+    color: #ffc2e6;
+    text-shadow: 2px 2px 0 #ff0070;
+  }
 }
