--- a/styles/style.css
+++ b/styles/style.css
@@ -36,18 +36,18 @@
 
 @media (max-width: 768px) {
   .header__theme-menu {
-    margin-top: 192px;
-    margin-bottom: 173px;
-    margin-right: 20px;
     align-self: flex-end;
+    margin-top: 192px;
+    margin-right: 20px;
+    margin-bottom: 173px;
   }
 }
 
 @media (max-width: 375px) {
   .header__theme-menu {
     margin-top: 75px;
-    margin-bottom: 65px;
     margin-right: 10px;
+    margin-bottom: 65px;
   }
 }
 
@@ -81,6 +81,7 @@
 }
 
 .header__title {
+  margin-bottom: 114px;
   color: #db00ff;
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 700;
@@ -88,7 +89,6 @@
   line-height: 129.53px;
   text-transform: lowercase;
   text-shadow: 4px 4px 0 var(--accent-color);
-  margin-bottom: 114px;
 }
 
 @media (max-width: 768px) {
@@ -109,13 +109,13 @@
   width: calc(50% - 20px);
   min-height: 71px;
   margin-right: 20px;
+  margin-bottom: 134px;
   color: #000028;
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
   background-color: var(--accent-color);
-  margin-bottom: 134px;
 }
 
 @media (max-width: 768px) {
@@ -126,10 +126,10 @@
 
 @media (max-width: 375px) {
   .header__text {
+    width: calc(100% - 20px);
+    margin-right: 10px;
     margin-bottom: 66px;
     margin-left: 10px;
-    margin-right: 10px;
-    width: calc(100% - 20px);
   }
 }
 
@@ -165,7 +165,7 @@
 }
 
 @media (max-width: 375px) {
-  .header::after   {
+  .header::after {
     bottom: 10px;
     left: 10px;
   }
@@ -223,7 +223,7 @@
 }
 
 .section-why__title {
-  min-width: 236px; 
+  min-width: 236px;
 }
 
 .section-causes {
@@ -395,7 +395,6 @@
   }
 }
 
-
 @media (max-width: 375px) {
   .image-gallery-container {
     display: flex;
@@ -404,28 +403,28 @@
   }
 
   .image-gallery-container_sunset {
+    width: 355px;
     height: 142px;
-    width: 355px;
   }
-  
+
   .image-gallery-container_ice-cream {
-    height: 355px;
     width: 355px;
+    height: 355px;
   }
-  
+
   .image-gallery-container_tape {
-    height: 237px;
     width: 355px;
+    height: 237px;
   }
-  
+
   .image-gallery-container_books {
+    width: 355px;
     height: 355px;
-    width: 355px;
   }
-  
+
   .image-gallery-container_street {
-    height: 237px;
     width: 355px;
+    height: 237px;
   }
 }
 
@@ -446,7 +445,7 @@
   }
 }
 
-/* .footer::before {
+.footer::before {
   content: "";
   position: absolute;
   top: 20px;
@@ -468,7 +467,7 @@
   height: 25px;
   border: solid var(--accent-color);
   border-width: 0 0 1px 1px;
-} */
+}
 
 .footer__title {
   color: #db00ff;
