--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,12 @@
   background-attachment: fixed;
 }
 
+.content {
+  display:flex; 
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   position: relative;
   display: flex;
@@ -20,6 +26,7 @@
   background-image: url(../images/cover-image-dark.png);
   background-position: center;
   background-size: cover;
+  height: 100vh;
 }
 
 @media (max-width: 375px) {
