--- a/styles/light.css
+++ b/styles/light.css
@@ -12,7 +12,7 @@
   --accent-color: #ff8dcb;
   --accent-color-light-theme: #353430;
 
-  background-color: #fff;
+  background-color: #fff1f7;
 
   .header {
     background-image: url(../images/cover-image-light.png);
