--- a/styles/light.css
+++ b/styles/light.css
@@ -11,8 +11,11 @@
   */
   --accent-color: #ff8dcb;
   --accent-color-light-theme: #353430;
+  --accent-color-light-theme-title: #ffc2e6;
+  --accent-color-light-theme-title-shadow: #ff0070;
+  --accent-color-light-theme-background: #fff1f7;
 
-  background-color: #fff1f7;
+  background-color: var(--accent-color-light-theme-background);
 
   .header {
     background-image: url(../images/cover-image-light.png);
@@ -27,13 +30,13 @@
   }
 
   .header__title {
-    color: #ffc2e6;
+    color: var(--accent-color-light-theme-title);
     text-shadow: 4px 4px 0 var(--accent-color);
   }
 
   .header__text {
     color: var(--accent-color-light-theme);
-    background-color: #ff8dcb;
+    background-color: var(--accent-color);
   }
 
   .header::before {
@@ -93,7 +96,7 @@
   }
 
   .footer__title {
-    color: #ffc2e6;
-    text-shadow: 2px 2px 0 #ff0070;
+    color: var(--accent-color-light-theme-title);
+    text-shadow: 2px 2px 0 var(--accent-color-light-theme-title-shadow);
   }
 }
