--- a/styles/light.css
+++ b/styles/light.css
@@ -17,13 +17,12 @@
   --button-color: #353430;
   --link-shadow-color: #ff8dcb;
   --content-text-color: #353430;
+  --corners-color: #353430;
+  --title-decor-color: #353430;
+  --background-image-url: url(../images/cover-image-light.png);
 
   background-color: var(--accent-color-light-theme-background);
 
-  .header {
-    background-image: url(../images/cover-image-light.png);
-  }
-  
   .header__title {
     color: var(--accent-color-light-theme-title);
     text-shadow: 4px 4px 0 var(--accent-color);
@@ -34,26 +33,8 @@
     background-color: var(--accent-color);
   }
 
-  .header::before {
-    border: solid var(--accent-color-light-theme);
-    border-width: 1px 1px 0 0;
-  }
-
-  .header::after {
-    border: solid var(--accent-color-light-theme);
-    border-width: 0 0 1px 1px;
-  }
-
   .header__rec {
     display: none;
-  }
-
-  .header__rec-pulse {
-    display: none;
-  }
-
-  .title-decor {
-    color: var(--accent-color-light-theme);
   }
 
   .section-why__blocks__item-title,
@@ -78,16 +59,6 @@
 
   .section-advice__blocks-title-text {
     color: var(--accent-color-light-theme);
-  }
-
-  .footer::before {
-    border: solid var(--accent-color-light-theme);
-    border-width: 1px 1px 0 0;
-  }
-
-  .footer::after {
-    border: solid var(--accent-color-light-theme);
-    border-width: 0 0 1px 1px;
   }
 
   .footer__title {
