--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,9 @@
   --button-color: #ff0070;
   --link-shadow-color: #ff0070;
   --content-text-color: #f1b2ce;
+  --corners-color: #ff0070;
+  --title-decor-color: #ff0070;
+  --background-image-url: url(../images/cover-image-dark.png);
 }
 
 .page {
@@ -37,21 +40,63 @@
     height: 1px;
     background-color: var(--content-text-color);
   }
-  
+
   &:focus {
     outline: 1px solid var(--content-text-color);
-  } 
+  }
+}
+
+/* corners for header and footer */
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+  width: 25px;
+  height: 25px;
+  border: solid var(--corners-color);
+  border-width: 1px 1px 0 0;
+}
+
+@media (max-width: 375px) {
+  .decorated-zone::before {
+    top: 10px;
+    right: 10px;
+  }
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  z-index: 1;
+  width: 25px;
+  height: 25px;
+  border: solid var(--corners-color);
+  border-width: 0 0 1px 1px;
+}
+
+@media (max-width: 375px) {
+  .decorated-zone::after {
+    bottom: 10px;
+    left: 10px;
+  }
 }
 
 .header {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
   min-height: 100vh;
   margin-bottom: 60px;
-  background-image: url(../images/cover-image-dark.png);
+  background-image: var(--background-image-url);
   background-position: center;
   background-size: cover;
 }
@@ -113,10 +158,10 @@
   cursor: pointer;
 
   &:focus {
-    outline: none;
-    border-bottom: 1px solid;
     /* компенсация 1px для border, чтобы экран не съезжал вниз */
-    margin-bottom: -1px; 
+    margin-bottom: -1px;
+    border-bottom: 1px solid;
+    outline: none;
   }
 }
 
@@ -178,44 +223,6 @@
   }
 }
 
-.header::before {
-  content: "";
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 1;
-  width: 25px;
-  height: 25px;
-  border: solid var(--accent-color);
-  border-width: 1px 1px 0 0;
-}
-
-@media (max-width: 375px) {
-  .header::before {
-    top: 10px;
-    right: 10px;
-  }
-}
-
-.header::after {
-  content: "";
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  z-index: 1;
-  width: 25px;
-  height: 25px;
-  border: solid var(--accent-color);
-  border-width: 0 0 1px 1px;
-}
-
-@media (max-width: 375px) {
-  .header::after {
-    bottom: 10px;
-    left: 10px;
-  }
-}
-
 .header__rec {
   position: absolute;
   top: 20px;
@@ -229,30 +236,36 @@
   text-transform: uppercase;
 
   &::after {
-    position: absolute;
     content: "";
+    position: absolute;
+    top: 8px;
+    left: 43px;
     width: 9px;
     height: 9px;
     border-radius: 50%;
     box-shadow: 0 0 4px 2px var(--accent-color);
     background-color: var(--accent-color);
-    top: 8px;
-    left: 43px;
   }
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-basis: 100%;
 }
 
 .title-decor {
   min-width: 315px;
-  color: var(--accent-color);
+  color: var(--title-decor-color);
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
 }
 
-.section-why {
+.section {
   display: flex;
-  flex-direction: row;
   gap: 20px;
   width: 100%;
   margin-bottom: 80px;
@@ -260,26 +273,31 @@
 }
 
 @media (max-width: 375px) {
-  .section-why {
-    flex-direction: column;
+  .section {
     margin-bottom: 50px;
     padding: 0 10px;
   }
 }
 
+.section-why {
+  flex-direction: row;
+}
+
 .section-causes {
-  display: flex;
   flex-direction: column;
-  gap: 20px;
-  width: 100%;
-  margin-bottom: 80px;
-  padding: 0 20px;
+}
+
+.section-advice {
+  flex-direction: row;
 }
 
 @media (max-width: 375px) {
-  .section-causes {
-    margin-bottom: 50px;
-    padding: 0 10px;
+  .section-why {
+    flex-direction: column;
+  }
+
+  .section-advice {
+    flex-direction: column;
   }
 }
 
@@ -304,18 +322,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-}
-
-.section-causes__blocks__item {
-  flex-basis: 100%;
-}
-
-.section-why__blocks__item,
-.section-causes__blocks__item,
-.section-advice__blocks__item {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
 }
 
 .section-why__blocks__item-title,
@@ -344,22 +350,6 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 23.4px;
-}
-
-.section-advice {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  margin-bottom: 80px;
-  padding: 0 20px;
-}
-
-@media (max-width: 375px) {
-  .section-advice {
-    flex-direction: column;
-    margin-bottom: 50px;
-    padding: 0 10px;
-  }
 }
 
 .section-advice__blocks-title {
@@ -498,30 +488,6 @@
   .footer {
     padding: 286px 13px;
   }
-}
-
-.footer::before {
-  content: "";
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 1;
-  width: 25px;
-  height: 25px;
-  border: solid var(--accent-color);
-  border-width: 1px 1px 0 0;
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  z-index: 1;
-  width: 25px;
-  height: 25px;
-  border: solid var(--accent-color);
-  border-width: 0 0 1px 1px;
 }
 
 .footer__title {
