--- a/styles/light.css
+++ b/styles/light.css
@@ -9,19 +9,19 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #fff1f7;
   --accent-color: #ff8dcb;
   --accent-color-light-theme: #353430;
   --accent-color-light-theme-title: #ffc2e6;
   --accent-color-light-theme-title-shadow: #ff0070;
-  --accent-color-light-theme-background: #fff1f7;
   --button-color: #353430;
   --link-shadow-color: #ff8dcb;
   --content-text-color: #353430;
   --corners-color: #353430;
   --title-decor-color: #353430;
+  --block-item-title: #ff8dcb;
+  --block-item-title-text-color: #353430;
   --background-image-url: url(../images/cover-image-light.png);
-
-  background-color: var(--accent-color-light-theme-background);
 
   .header__title {
     color: var(--accent-color-light-theme-title);
@@ -37,27 +37,11 @@
     display: none;
   }
 
-  .section-why__blocks__item-title,
-  .section-causes__blocks__item-title,
-  .section-advice__blocks__item-title {
-    background-color: var(--accent-color);
-  }
-
-  .section-why__blocks__item-title-text,
-  .section-causes__blocks__item-title-text,
-  .section-advice__blocks__item-title-text {
-    color: var(--accent-color-light-theme);
-  }
-
   .block-item-text {
     color: var(--accent-color-light-theme);
   }
 
   .images-gallery-title-text {
-    color: var(--accent-color-light-theme);
-  }
-
-  .section-advice__blocks-title-text {
     color: var(--accent-color-light-theme);
   }
 
