--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 :root {
+  --background-color: #000028;
   --accent-color: #ff0070;
   --accent-color-theme-dark-title: #db00ff;
   --accent-color-theme-dark-text: #f1b2ce;
@@ -8,6 +9,8 @@
   --content-text-color: #f1b2ce;
   --corners-color: #ff0070;
   --title-decor-color: #ff0070;
+  --block-item-title: #ff0070;
+  --block-item-title-text-color: #000028;
   --background-image-url: url(../images/cover-image-dark.png);
 }
 
@@ -16,7 +19,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--accent-color-dark-theme);
+  background-color: var(--background-color);
   background-attachment: fixed;
 }
 
@@ -248,11 +251,33 @@
   }
 }
 
+.header-block-item-title {
+  align-self: flex-end;
+  width: calc(50% - 20px);
+  margin-right: 20px;
+  margin-bottom: 134px;
+}
+
+@media (max-width: 768px) {
+  .header-block-item-title {
+    margin-bottom: 183px;
+  }
+}
+
+@media (max-width: 375px) {
+  .header-block-item-title {
+    width: calc(100% - 20px);
+    margin-right: 10px;
+    margin-bottom: 66px;
+    margin-left: 10px;
+  }
+}
+
 .section-content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
   flex-basis: 100%;
+  gap: 10px;
 }
 
 .title-decor {
@@ -324,16 +349,12 @@
   gap: 20px;
 }
 
-.section-why__blocks__item-title,
-.section-causes__blocks__item-title,
-.section-advice__blocks__item-title {
-  background-color: var(--accent-color);
+.block-item-title {
+  background-color: var(--block-item-title);
 }
 
-.section-why__blocks__item-title-text,
-.section-causes__blocks__item-title-text,
-.section-advice__blocks__item-title-text {
-  color: var(--accent-color-dark-theme);
+.block-item-title-text {
+  color: var(--block-item-title-text-color);
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -352,18 +373,6 @@
   line-height: 23.4px;
 }
 
-.section-advice__blocks-title {
-  background-color: var(--accent-color);
-}
-
-.section-advice__blocks-title-text {
-  color: var(--accent-color-dark-theme);
-  font-family: "IBM Plex mono", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 23.4px;
-}
-
 .images-gallery {
   margin-bottom: 60px;
 }
@@ -376,7 +385,6 @@
 
 .images-gallery-title {
   margin-bottom: 20px;
-  background-color: var(--accent-color);
 }
 
 .images-gallery-title-text {
