--- a/styles/light.css
+++ b/styles/light.css
@@ -9,11 +9,11 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  
   --background-color: #fff1f7;
   --accent-color: #ff8dcb;
   --accent-color-light-theme: #353430;
-  --accent-color-light-theme-title: #ffc2e6;
-  --accent-color-light-theme-title-shadow: #ff0070;
+  --main-title-color: #ffc2e6;
   --button-color: #353430;
   --link-shadow-color: #ff8dcb;
   --content-text-color: #353430;
@@ -22,20 +22,7 @@
   --block-item-title: #ff8dcb;
   --block-item-title-text-color: #353430;
   --background-image-url: url(../images/cover-image-light.png);
-
-  .header__title {
-    color: var(--accent-color-light-theme-title);
-    text-shadow: 4px 4px 0 var(--accent-color);
-  }
-
-  .header__text {
-    color: var(--accent-color-light-theme);
-    background-color: var(--accent-color);
-  }
-
-  .header__rec {
-    display: none;
-  }
+  --header-rec-state: none;
 
   .block-item-text {
     color: var(--accent-color-light-theme);
@@ -45,8 +32,4 @@
     color: var(--accent-color-light-theme);
   }
 
-  .footer__title {
-    color: var(--accent-color-light-theme-title);
-    text-shadow: 2px 2px 0 var(--accent-color-light-theme-title-shadow);
-  }
 }
