--- a/styles/style.css
+++ b/styles/style.css
@@ -22,10 +22,10 @@
   justify-content: center;
   align-items: center;
   background-color: var(--background-color);
-  background-attachment: fixed;
   background-image: var(--background-image-url);
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .content {
@@ -78,11 +78,11 @@
 }
 
 .header__rec {
-  display: var(--header-rec-state);
   position: absolute;
   top: 20px;
   right: 48px;
   z-index: 1;
+  display: var(--header-rec-state);
   color: var(--accent-color);
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 400;
@@ -110,20 +110,20 @@
   }
 }
 
-.header { 
+.header {
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   width: 100%;
-  min-height: 668px;
   height: 100vh;
-  padding: 20px;
+  min-height: 668px;
   margin-bottom: 60px;
+  padding: 20px;
 }
 
 @media (max-width: 455px) {
   .header {
-    padding: 10px;
     margin-bottom: 40px;
+    padding: 10px;
   }
 }
 
@@ -131,7 +131,7 @@
   justify-self: center;
 }
 
-@media(max-width: 768px){
+@media (max-width: 768px) {
   .header__theme-menu {
     justify-self: flex-end;
     align-self: center;
@@ -144,7 +144,7 @@
   gap: 10px;
 }
 
-@media(max-width: 768px){
+@media (max-width: 768px) {
   .header__theme-menu-list {
     flex-direction: column;
   }
@@ -195,22 +195,42 @@
 }
 
 .header-block-item-title {
+  justify-self: flex-end;
   align-self: flex-end;
+  align-self: center;
+  width: calc(50% - 6px);
   min-height: 71px;
-  width: calc(50% - 6px);  
   color: var(--accent-color-theme-dark-header-text);
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
   background-color: var(--accent-color);
-  justify-self: flex-end;
-  align-self: center;
 }
 
 @media (max-width: 455px) {
   .header-block-item-title {
     width: calc(100%);
+  }
+}
+
+.link {
+  position: relative;
+  text-decoration: none;
+  text-shadow: 2px 2px var(--link-shadow-color);
+
+  &:hover::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--content-text-color);
+  }
+
+  &:focus {
+    outline: 1px solid var(--content-text-color);
   }
 }
 
@@ -410,7 +430,6 @@
   }
 }
 
-
 .image {
   background-position: center;
   background-size: cover;
@@ -443,12 +462,12 @@
 
 .footer {
   position: relative;
-  width: 100%;
-  min-height: 668px;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100vh;
+  min-height: 668px;
 }
 
 .footer__title {
@@ -465,4 +484,4 @@
   .footer__title {
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
-} 
+}
