--- a/styles/light.css
+++ b/styles/light.css
@@ -14,6 +14,7 @@
   --accent-color: #ff8dcb;
   --accent-color-light-theme: #353430;
   --main-title-color: #ffc2e6;
+  --main-title-shadow-color: #ff0070;
   --button-color: #353430;
   --link-shadow-color: #ff8dcb;
   --content-text-color: #353430;
@@ -23,12 +24,4 @@
   --block-item-title-text-color: #353430;
   --background-image-url: url(../images/cover-image-light.png);
   --header-rec-state: none;
-
-  .block-item-text {
-    color: var(--accent-color-light-theme);
-  }
-
-  .images-gallery-title-text {
-    color: var(--accent-color-light-theme);
-  }
 }
