--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,40 @@
-:root {
-  --background-color: #000028;
-  --accent-color: #ff0070;
-  --main-title-color: #db00ff;
-  --main-title-shadow-color: #ff0070;
-  --accent-color-theme-dark-text: #f1b2ce;
-  --accent-color-theme-dark-header-text: #000028;
-  --button-color: #ff0070;
-  --link-shadow-color: #ff0070;
-  --content-text-color: #f1b2ce;
-  --corners-color: #ff0070;
-  --title-decor-color: #ff0070;
-  --block-item-title: #ff0070;
-  --block-item-title-text-color: #000028;
-  --background-image-url: url(../images/cover-image-dark.png);
-  --header-rec-state: flex;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #000028;
+    --accent-color: #ff0070;
+    --main-title-color: #db00ff;
+    --main-title-shadow-color: #ff0070;
+    --accent-color-theme-dark-text: #f1b2ce;
+    --accent-color-theme-dark-header-text: #000028;
+    --button-color: #ff0070;
+    --link-shadow-color: #ff0070;
+    --content-text-color: #f1b2ce;
+    --corners-color: #ff0070;
+    --title-decor-color: #ff0070;
+    --block-item-title: #ff0070;
+    --block-item-title-text-color: #000028;
+    --background-image-url: url(../images/cover-image-dark.png);
+    --header-rec-state: flex;
+  }
+} 
+
+@media (prefers-color-scheme: light) {
+  :root { 
+    --background-color: #fff1f7;
+    --accent-color: #ff8dcb;
+    --accent-color-light-theme: #353430;
+    --main-title-color: #ffc2e6;
+    --main-title-shadow-color: #ff0070;
+    --button-color: #353430;
+    --link-shadow-color: #ff8dcb;
+    --content-text-color: #353430;
+    --corners-color: #353430;
+    --title-decor-color: #353430;
+    --block-item-title: #ff8dcb;
+    --block-item-title-text-color: #353430;
+    --background-image-url: url(../images/cover-image-light.png);
+    --header-rec-state: none;
+  }
 }
 
 .page {
