--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@
   z-index: 1;
   display: var(--header-rec-state);
   color: var(--accent-color);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
@@ -179,7 +179,7 @@
   border: none;
   padding: 0 13px 2px;
   color: var(--button-color);
-  font-family: "IBM Plex mono";
+  font-family: var(--font-family), sans-serif;
   font-weight: 400;
   font-size: 18px;
   text-transform: lowercase;
@@ -201,7 +201,7 @@
 
 .header__title {
   color: var(--main-title-color);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 700;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 129.53px;
@@ -222,7 +222,7 @@
   width: calc(50% - 6px);
   min-height: 71px;
   color: var(--accent-color-theme-dark-header-text);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
@@ -261,7 +261,7 @@
 
 .block-item-title-text {
   color: var(--block-item-title-text-color);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
@@ -277,7 +277,7 @@
 .title-decor {
   min-width: 315px;
   color: var(--title-decor-color);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
@@ -365,7 +365,7 @@
 
 .block-item-text {
   color: var(--accent-color-theme-dark-text);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 23.4px;
@@ -387,7 +387,7 @@
 
 .images-gallery-title-text {
   color: var(--accent-color-dark-theme);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
@@ -493,7 +493,7 @@
 
 .footer__title {
   color: var(--main-title-color);
-  font-family: "IBM Plex mono", sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-weight: 700;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 129.53px;
