--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  
+
   --background-color: #fff1f7;
   --accent-color: #ff8dcb;
   --accent-color-light-theme: #353430;
@@ -22,6 +22,8 @@
   --title-decor-color: #353430;
   --block-item-title: #ff8dcb;
   --block-item-title-text-color: #353430;
+  --images-gallery-title-color: #353430;
+  --block-item-text-color: #000028;
   --background-image-url: url(../images/cover-image-light.png);
   --header-rec-state: none;
 }
