--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,6 +4,28 @@
   переключая тему
 */
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #000028;
+    --accent-color: #ff0070;
+    --main-title-color: #db00ff;
+    --main-title-shadow-color: #ff0070;
+    --accent-color-theme-dark-text: #f1b2ce;
+    --accent-color-theme-dark-header-text: #000028;
+    --button-color: #ff0070;
+    --link-shadow-color: #ff0070;
+    --content-text-color: #f1b2ce;
+    --corners-color: #ff0070;
+    --title-decor-color: #ff0070;
+    --block-item-title: #ff0070;
+    --block-item-title-text-color: #000028;
+    --images-gallery-title-color: #000028;
+    --block-item-text-color: #ff8dcb;
+    --background-image-url: url(../images/cover-image-dark.png);
+    --header-rec-state: flex;
+  }
+}
+
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
